--- a/app/src/main/res/drawable/no_urgent_ripple.xml
+++ b/app/src/main/res/drawable/no_urgent_ripple.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/urgent_ripple">
-    <item android:drawable="@drawable/urgent_bg"></item>
+    <item android:drawable="@drawable/no_urgent_bg"></item>
 </ripple>
