--- a/app/src/main/res/drawable/urgent_bg.xml
+++ b/app/src/main/res/drawable/urgent_bg.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/item_btn_text"/>
-    <size android:height="22dp" android:width="44dp"/>
-    <stroke android:color="@color/item_btn_text" android:width="2dp"></stroke>
-    <corners android:radius="4dp"></corners>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:top="16dp"
+        android:bottom="16dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/item_btn_text"/>
+            <size android:height="20dp"/>
+            <stroke android:color="@color/item_btn_text" android:width="2dp"></stroke>
+            <corners android:radius="4dp"></corners>
+        </shape>
+    </item>
+</layer-list>
