--- a/app/src/main/res/layout/bottom_recording_edit.xml
+++ b/app/src/main/res/layout/bottom_recording_edit.xml
@@ -41,12 +41,12 @@
             style="?android:attr/borderlessButtonStyle"
             android:id="@+id/bottom_urgent"
             android:layout_width="44dp"
-            android:layout_height="22dp"
+            android:layout_height="match_parent"
             android:text="urgent"
             android:textSize="12dp"
             android:textColor="@color/white"
             android:textAllCaps="false"
-            android:background="@drawable/no_urgent_bg"
+            android:background="@drawable/no_urgent_ripple"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_toRightOf="@+id/bottom_alarm"/>
