--- a/app/src/main/res/layout/bottom_recording_view.xml
+++ b/app/src/main/res/layout/bottom_recording_view.xml
@@ -58,7 +58,7 @@
             style="?android:attr/borderlessButtonStyle"
             android:id="@+id/bottom_view_urgent"
             android:layout_width="44dp"
-            android:layout_height="22dp"
+            android:layout_height="match_parent"
             android:text="urgent"
             android:textSize="12dp"
             android:textColor="@color/white"
