--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/title_record"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -31,7 +30,8 @@
             android:textColor="@color/recording_title"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:background="@null" />
+            android:background="@null"
+            android:importantForAutofill="no" tools:targetApi="o"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -41,17 +41,17 @@
             android:background="@color/recording_title"
             android:layout_below="@+id/list_title"/>
     </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
         android:background="@color/white"
         android:descendantFocusability="afterDescendants"
         app:layout_constraintBottom_toTopOf="@+id/list_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_title" />
+        app:layout_constraintTop_toBottomOf="@+id/list_title_layout" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/list_menu"
@@ -73,7 +73,7 @@
             android:paddingBottom="11dp"
             android:paddingTop="11dp"
             android:scaleType="centerInside"
-            android:src="@drawable/back_icon"
+            android:src="@drawable/delete_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
