--- a/app/src/main/res/drawable/no_urgent_bg.xml
+++ b/app/src/main/res/drawable/no_urgent_bg.xml
@@ -3,9 +3,8 @@
     <item android:top="16dp"
         android:bottom="16dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/alarm_btn_delete_border"/>
-            <size android:height="20dp"/>
-            <stroke android:color="@color/item_btn_text" android:width="2dp"></stroke>
+            <solid android:color="@android:color/transparent"/>
+            <stroke android:color="@color/alarm_btn_delete_border" android:width="2dp"></stroke>
             <corners android:radius="4dp"></corners>
         </shape>
     </item>
