--- a/app/src/main/res/layout/bottom_recording_edit.xml
+++ b/app/src/main/res/layout/bottom_recording_edit.xml
@@ -42,9 +42,9 @@
             android:id="@+id/bottom_urgent"
             android:layout_width="44dp"
             android:layout_height="match_parent"
-            android:text="urgent"
+            android:text="@string/urgent"
             android:textSize="12dp"
-            android:textColor="@color/white"
+            android:textColor="@color/alarm_btn_delete_border"
             android:textAllCaps="false"
             android:background="@drawable/no_urgent_ripple"
             android:layout_centerVertical="true"
