--- a/app/src/main/res/layout/bottom_recording_view.xml
+++ b/app/src/main/res/layout/bottom_recording_view.xml
@@ -60,6 +60,7 @@
             android:layout_width="44dp"
             android:layout_height="match_parent"
             android:text="@string/urgent"
+            android:textStyle="bold"
             android:textSize="12dp"
             android:textColor="@color/alarm_btn_delete_border"
             android:textAllCaps="false"
