--- a/app/src/main/res/layout/item_edit.xml
+++ b/app/src/main/res/layout/item_edit.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginEnd="0dp"
+        android:textCursorDrawable="@drawable/text_cursor_drawable"
         android:background="@null"
         android:ems="10"
         android:hint="@null"
