--- a/app/src/main/res/layout/main_noteitem.xml
+++ b/app/src/main/res/layout/main_noteitem.xml
@@ -1,41 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="19dp">
+    android:layout_height="wrap_content">
     <LinearLayout
-        android:id="@+id/main_note_audio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        android:layout_marginLeft="25dp">
-        <ImageView
-            android:layout_width="52dp"
-            android:layout_height="16dp"
-            android:src="@drawable/main_task_audio"/>
-        <ImageView
-            android:layout_width="52dp"
-            android:layout_height="16dp"
-            android:src="@drawable/main_task_audio"/>
-    </LinearLayout>
-    <TextView
-        android:id="@+id/main_note_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is a note title"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/main_task_title"
-        android:layout_marginLeft="25dp"/>
-    <TextView
-        android:id="@+id/main_note_time"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2018-10-08"
-        android:textSize="14sp"
-        android:textColor="@color/main_task_alarm"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"/>
-</LinearLayout>
+        android:orientation="vertical"
+        android:paddingBottom="19dp">
+        <LinearLayout
+            android:id="@+id/main_note_audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:layout_marginLeft="25dp">
+            <ImageView
+                android:layout_width="52dp"
+                android:layout_height="16dp"
+                android:src="@drawable/main_task_audio"/>
+            <ImageView
+                android:layout_width="52dp"
+                android:layout_height="16dp"
+                android:src="@drawable/main_task_audio"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/main_note_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="This is a note title"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/main_task_title"
+            android:layout_marginLeft="25dp"/>
+        <TextView
+            android:id="@+id/main_note_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2018-10-08"
+            android:textSize="14sp"
+            android:textColor="@color/main_task_alarm"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"/>
+    </LinearLayout>
+    <ImageButton
+        android:id="@+id/main_note_edit"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:layout_marginRight="20dp"
+        android:scaleType="center"
+        android:background="@null"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/main_task_complete" />
+</RelativeLayout>
