--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="deap_memo">#757575</color>
     <color name="shallow_memo">#e0e0e0</color>
     <color name="white_memo">#fafafa</color>
+    <color name="no_data_top">#FFE5E5E5</color>
 
     <!-- guide color -->
     <color name="guide_title">#666666</color>
