--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -12,13 +12,28 @@
         android:layout_width="match_parent"
         android:layout_height="61dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/calendar_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/calendar_select"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/last_month"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/button_ripple"
             android:contentDescription="@string/last_month_icon"
             android:paddingBottom="8dp"
@@ -26,14 +41,14 @@
             android:scaleType="centerInside"
             android:src="@drawable/month_change_left_icon"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/month_year"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/next_month"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="125dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/button_ripple"
             android:contentDescription="@string/next_month_icon"
             android:paddingBottom="8dp"
@@ -41,36 +56,37 @@
             android:scaleType="centerInside"
             android:src="@drawable/month_change_right_icon"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/last_month"
+            app:layout_constraintStart_toEndOf="@+id/month_year"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/calendar_month"
+            android:id="@+id/month_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="3dp"
+            android:layout_marginBottom="1dp"
             android:textColor="@color/calendar_select"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/next_month"
-            app:layout_constraintStart_toEndOf="@+id/last_month"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/calendar_close"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/button_ripple"
             android:contentDescription="@string/close_icon"
-            android:paddingBottom="12dp"
-            android:paddingTop="12dp"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:scaleType="centerInside"
-            android:src="@drawable/close_icon"
+            android:src="@drawable/calendar_close_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
     <View
@@ -161,7 +177,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:firstDayOfWeek="Sunday"
-        app:layout_constraintBottom_toTopOf="@+id/back_to_top"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -174,45 +190,5 @@
             android:background="@color/white" />
 
     </com.shining.calendar.calendar.NCalendar>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/back_to_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/back_to_top_icon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/back_to_top_icon"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/back_to_top_icon_text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/back_to_top_icon_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/back_top"
-            android:textColor="@color/back_top"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
