--- a/app/src/main/res/drawable/toast_background.xml
+++ b/app/src/main/res/drawable/toast_background.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient
-        android:type="radial"
-        android:gradientRadius="300dp"
-        android:startColor="@color/toast_background"
-        android:endColor="@color/text_color_orange"/>
+    <solid android:color="@color/text_color_orange"/>
     <corners android:radius="20dp" />
 </shape>
