--- a/app/src/main/res/values-zh/string.xml
+++ b/app/src/main/res/values-zh/string.xml
@@ -6,6 +6,7 @@
         <string name="state">state</string>
         <string name="title">title</string>
         <string name="item">item</string>
+        <string name="error">错误</string>
 
         <!--guide string -->
         <string name="guide_image">guide image</string>
