--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -10,10 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintLeft_toLeftOf="@id/main_line_first"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/main_line_first">
         <TextView
             android:id="@+id/main_titlebar_task"
             android:layout_width="wrap_content"
@@ -61,20 +60,23 @@
         android:src="@drawable/calendar_icon"
         android:scaleType="fitCenter"
         android:background="@null"
-        android:layout_marginTop="11dp"
-        android:layout_marginRight="13dp"
         android:padding="12dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="@id/main_line_first"
+        app:layout_constraintBottom_toBottomOf="@id/main_line_first"/>
     <View
         android:id="@+id/main_line_first"
         android:layout_width="0dp"
         android:layout_height="1px"
         android:background="@color/main_line"
         android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@id/main_titlebar_calendar"
-        app:layout_constraintLeft_toLeftOf="@id/main_titlebar"
-        app:layout_constraintRight_toRightOf="@+id/main_titlebar_calendar"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="13dp"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         />
     <LinearLayout
         android:id="@+id/main_titlebar_add"
