--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -8,6 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     app:swipeEnable="true"
+    app:leftSwipe="true"
     app:ios="true">
 
     <android.support.constraint.ConstraintLayout
@@ -83,20 +84,17 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <ImageButton
+    <TextView
         android:id="@+id/home_delete"
-        android:layout_width="32dp"
+        android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/home_page_delete_icon"
-        android:contentDescription="@string/home_delete"
-        android:background="@drawable/bg_rect7_orange" />
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:gravity="center"
+        android:background="@color/text_color_red"
+        android:textColor="@color/white"
+        android:text="删除"
+        android:textSize="18sp"/>
 
-    <Button
-        android:layout_width="25dp"
-        android:layout_height="32dp"
-        android:background="@null"/>
 
 </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
