--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -93,8 +93,8 @@
         android:gravity="center"
         android:background="@color/text_color_red"
         android:textColor="@color/white"
-        android:text="删除"
-        android:textSize="18sp"/>
+        android:text="@string/main_delete"
+        android:textSize="16sp"/>
 
 
 </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
