--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,7 +7,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <include android:id="@+id/main_no_data"
         layout="@layout/main_no_data"
         android:layout_width="wrap_content"
@@ -16,6 +21,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.4"
-        />
+        app:layout_constraintVertical_bias="0.4" />
+
 </android.support.constraint.ConstraintLayout>
