--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -2,6 +2,7 @@
 <com.mcxtzhang.swipemenulib.SwipeMenuLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeMenuLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="27dp"
@@ -95,6 +96,5 @@
         android:textColor="@color/white"
         android:text="@string/main_delete"
         android:textSize="16sp"/>
-
-
+    
 </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
