--- a/app/src/main/res/layout/main_noteitem.xml
+++ b/app/src/main/res/layout/main_noteitem.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeMenuLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="19dp"
+    android:clickable="true"
+    android:focusable="true"
+    app:swipeEnable="true"
+    app:leftSwipe="true"
+    app:ios="false">
     <LinearLayout
+        android:id="@+id/main_note_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="19dp">
+        android:orientation="vertical">
         <LinearLayout
             android:id="@+id/main_note_audio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="gone"
-            android:layout_marginLeft="25dp">
+            android:layout_marginStart="25dp">
             <ImageView
                 android:layout_width="52dp"
                 android:layout_height="16dp"
-                android:src="@drawable/main_task_audio"/>
+                android:src="@drawable/main_task_audio"
+                android:contentDescription="@string/image_icon"/>
             <ImageView
                 android:layout_width="52dp"
                 android:layout_height="16dp"
-                android:src="@drawable/main_task_audio"/>
+                android:src="@drawable/main_task_audio"
+                android:contentDescription="@string/image_icon"/>
         </LinearLayout>
         <TextView
             android:id="@+id/main_note_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="This is a note title"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/main_task_title"
-            android:layout_marginLeft="25dp"/>
+            android:layout_marginStart="25dp"/>
         <TextView
             android:id="@+id/main_note_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2018-10-08"
             android:textSize="14sp"
             android:textColor="@color/main_task_alarm"
-            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="10dp"/>
     </LinearLayout>
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/home_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:gravity="center"
+        android:background="@color/text_color_red"
+        android:textColor="@color/white"
+        android:text="@string/main_delete"
+        android:textSize="16sp"/>
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
