--- a/app/src/main/res/layout/main_taskitem.xml
+++ b/app/src/main/res/layout/main_taskitem.xml
@@ -1,97 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.mcxtzhang.swipemenulib.SwipeMenuLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeMenuLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="19dp">
-    <ImageView
-        android:id="@+id/main_task_type"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:src="@drawable/text_type_icon"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-    <ImageView
-        android:id="@+id/main_task_urgent"
-        android:layout_width="16dp"
-        android:layout_height="12dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/urgent_icon"
-        app:layout_constraintLeft_toLeftOf="@id/main_task_type"
-        app:layout_constraintTop_toBottomOf="@+id/main_task_type"
-        />
+    android:paddingBottom="19dp"
+    android:clickable="true"
+    android:focusable="true"
+    app:swipeEnable="true"
+    app:leftSwipe="true"
+    app:ios="false">
 
-    <TextView
-        android:id="@+id/main_task_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_marginLeft="6dp"
-        android:text="This is a title"
-        android:textColor="@color/main_task_title"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginRight="16dp"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintRight_toLeftOf="@+id/main_task_complete"
-        app:layout_constraintLeft_toRightOf="@+id/main_task_type"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_default="wrap" />
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/main_task_audio1"
-        android:layout_width="52dp"
-        android:layout_height="16dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/main_task_audio"
-        app:layout_constraintLeft_toRightOf="@+id/main_task_type"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="invisible"/>
-    <ImageView
-        android:id="@+id/main_task_audio2"
-        android:layout_width="52dp"
-        android:layout_height="16dp"
-        android:layout_marginLeft="2.5dp"
-        android:src="@drawable/main_task_audio"
-        app:layout_constraintStart_toEndOf="@id/main_task_audio1"
-        app:layout_constraintTop_toTopOf="@+id/main_task_audio1"
-        android:visibility="invisible"/>
-    <TextView
-        android:id="@+id/main_task_alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/main_task_alarm"
-        android:textSize="14sp"
-        android:text="no alarm"
-        android:layout_marginTop="4dp"
-        app:layout_constraintLeft_toLeftOf="@+id/main_task_title"
-        app:layout_constraintTop_toBottomOf="@id/main_task_title"/>
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/main_task_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/main_task_complete"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/main_task_type"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="4dp"
+                android:contentDescription="@string/image_icon"
+                android:src="@drawable/text_type_icon"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/main_task_urgent"
+                android:layout_width="16dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@string/image_icon"
+                android:src="@drawable/urgent_icon"
+                app:layout_constraintLeft_toLeftOf="@id/main_task_type"
+                app:layout_constraintTop_toBottomOf="@+id/main_task_type" />
+
+            <TextView
+                android:id="@+id/main_task_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="16dp"
+                android:singleLine="true"
+                android:textColor="@color/main_task_title"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintLeft_toRightOf="@+id/main_task_type"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_default="wrap" />
+
+            <ImageView
+                android:id="@+id/main_task_audio1"
+                android:layout_width="52dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="4dp"
+                android:contentDescription="@string/image_icon"
+                android:src="@drawable/main_task_audio"
+                android:visibility="invisible"
+                app:layout_constraintLeft_toRightOf="@+id/main_task_title"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/main_task_audio2"
+                android:layout_width="52dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="2.5dp"
+                android:contentDescription="@string/image_icon"
+                android:src="@drawable/main_task_audio"
+                android:visibility="invisible"
+                app:layout_constraintStart_toEndOf="@id/main_task_audio1"
+                app:layout_constraintTop_toTopOf="@+id/main_task_audio1" />
+
+            <TextView
+                android:id="@+id/main_task_alarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/main_task_no_alarm"
+                android:textColor="@color/main_task_alarm"
+                android:textSize="14sp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintLeft_toLeftOf="@+id/main_task_title"
+                app:layout_constraintTop_toBottomOf="@id/main_task_title" />
+
+        </android.support.constraint.ConstraintLayout>
+
     <ImageButton
         android:id="@+id/main_task_complete"
         android:layout_width="38dp"
         android:layout_height="0dp"
-        android:layout_marginRight="20dp"
-        android:scaleType="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="8dp"
         android:background="@null"
+        android:contentDescription="@string/image_icon"
+        android:scaleType="center"
         android:src="@drawable/main_task_complete"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/main_task_alarm"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/main_task_confirm"
         android:layout_width="25dp"
         android:layout_height="18dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:contentDescription="@string/image_icon"
         android:src="@drawable/finish_icon"
         android:visibility="invisible"
-        app:layout_constraintVertical_bias="0.6"
-        app:layout_constraintBottom_toBottomOf="@id/main_task_alarm"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="@id/main_task_complete"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    </android.support.constraint.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/home_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:gravity="center"
+        android:background="@color/text_color_red"
+        android:textColor="@color/white"
+        android:text="@string/main_delete"
+        android:textSize="16sp"/>
+
+</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
