--- a/app/src/main/res/layout/main_taskitem.xml
+++ b/app/src/main/res/layout/main_taskitem.xml
@@ -136,7 +136,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:gravity="center"
-        android:background="@color/text_color_red"
+        android:background="@color/delete_bg"
         android:textColor="@color/white"
         android:text="@string/main_delete"
         android:textSize="16sp"/>
