--- a/app/src/main/res/layout/main_taskitem.xml
+++ b/app/src/main/res/layout/main_taskitem.xml
@@ -2,11 +2,10 @@
 <com.mcxtzhang.swipemenulib.SwipeMenuLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeMenuLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="19dp"
+    android:layout_marginBottom="3dp"
     android:clickable="true"
     android:focusable="true"
     app:swipeEnable="true"
@@ -24,6 +23,8 @@
             android:id="@+id/main_task_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/main_task_complete"
             app:layout_constraintStart_toStartOf="parent"
