--- a/app/src/main/res/layout/list_main.xml
+++ b/app/src/main/res/layout/list_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/swipeMenuLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="27dp"
+    android:layout_marginBottom="3dp"
     android:clickable="true"
     android:focusable="true"
     app:swipeEnable="true"
@@ -21,13 +21,18 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/title_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/expand_icon"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@color/white"
                 android:contentDescription="@string/expand_icon"
                 android:paddingTop="8dp"
@@ -41,16 +46,16 @@
             <TextView
                 android:id="@+id/list_title"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginStart="7dp"
                 android:layout_marginEnd="15dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:gravity="start"
+                android:gravity="start|center_vertical"
+                android:singleLine="true"
                 android:textColor="@color/recording_title"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/finished_icon"
                 app:layout_constraintStart_toEndOf="@+id/expand_icon"
@@ -75,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +93,7 @@
     <TextView
         android:id="@+id/home_delete"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
+        android:layout_height="48dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:gravity="center"
