--- a/app/src/main/res/layout/main_noteitem.xml
+++ b/app/src/main/res/layout/main_noteitem.xml
@@ -5,7 +5,7 @@
     android:id="@+id/swipeMenuLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="19dp"
+    android:paddingBottom="3dp"
     android:clickable="true"
     android:focusable="true"
     app:swipeEnable="true"
@@ -15,6 +15,8 @@
         android:id="@+id/main_note_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:orientation="vertical">
         <LinearLayout
             android:id="@+id/main_note_audio"
